2009-11-22  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix the timeout of fast/frames/frame-navigation.html
        https://bugs.webkit.org/show_bug.cgi?id=31638

        The test is timeouting, because it uses the WorkQueue to load a document in one
        of the child frames and once the loading is finished, the DRT does not dump the
        tree. This is because it waits for the QWebFrame::loadFinished() signal from
        the main frame, while it should connect to QWebPage::loadFinished().

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):

git-svn-id: svn://svn.chromium.org/blink/trunk@51293 bbb929c8-8fbe-4397-9dbb-9b2b20218538