third_party/WebKit/WebKitTools/DumpRenderTree/qt/DumpRenderTree.cpp
@@ -267,7 +267,7 @@ DumpRenderTree::DumpRenderTree()
             this, SLOT(connectFrame(QWebFrame *)));
     connectFrame(m_page->mainFrame());
 
-    connect(m_page->mainFrame(), SIGNAL(loadFinished(bool)),
+    connect(m_page, SIGNAL(loadFinished(bool)),
             m_controller, SLOT(maybeDump(bool)));
 
     connect(m_page->mainFrame(), SIGNAL(titleChanged(const QString&)),
